Bug 143372 - KeyID in language select list
Summary: KeyID in language select list
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.3.0 target:7.2.0.2 target:7.1.6
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-14 21:00 UTC by Telesto
Modified: 2021-07-16 08:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Language selection on the Character tab (81.95 KB, image/png)
2021-07-15 13:33 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-07-14 21:00:12 UTC
Description:
UI: KeyID in language select list

Steps to Reproduce:
1. open writer.
2. Format -> Character -> Font tab
3. Drop down Language.. 

Actual Results:
Find entry called KeyID

Expected Results:
KeyID isn't a language


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4e0a7df2dfa10bc52d5dbda34f43e0bc0df22ae7
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2021-07-14 21:02:54 UTC
Also in
Version: 6.0.6.0.0+
Build ID: c30963b8b4bbbe42a24b97aafa161eff9d7ccdd4
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL

and in
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL

and in
LibreOffice 3.5.7.2 
Build ID: 3215f89-f603614-ab984f2-7348103-1225a5b
Comment 2 Ming Hua 2021-07-14 23:53:10 UTC
Reproduced with both 7.0.6 and 7.2.0 Beta1:

Version: 7.0.6.2 (x64)
Build ID: 144abb84a525d8e30c9dbbefa69cbbf2d8d4ae3b
CPU threads: 2; OS: Windows 10.0 Build 19041; UI render: default; VCL: win
Locale: zh-CN (zh_CN); UI: en-US
Calc: threaded

Version: 7.2.0.1 (x64) / LibreOffice Community
Build ID: 32efc3b7f3a71cfa6a7fa3f6c208333df48656cc
CPU threads: 2; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: en-US
Calc: threaded

Not limited to Writer either, for example also happens to the "Font" tab of cell formatting (menu Format > Cells...) dialog.
Comment 3 NISZ LibreOffice Team 2021-07-15 13:33:09 UTC
Created attachment 173600 [details]
Language selection on the Character tab

Repro with 

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 717dc8e3575a18e1e18dc446031e6db4e60a873d
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Normally the KeyID "localization" is there in debug builds to help translators match strings on the UI with the ones in translation files.

This option should normally appear only in the UI language selector under Settings - Language Settings - Languages - Language Of.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2021-07-15 20:56:53 UTC
Taking.
Comment 5 Commit Notification 2021-07-15 22:36:26 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da13b76e07231131cb951868a314ee6f51c0f254

Resolves: tdf#143372 Exclude {qtz} KeyID from SvxLanguageBox list

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2021-07-15 22:37:17 UTC
Pending review
https://gerrit.libreoffice.org/c/core/+/118927 for 7-2
https://gerrit.libreoffice.org/c/core/+/118928 for 7-1
Comment 7 Commit Notification 2021-07-16 08:17:31 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/00bfb02010b0ee83c60d7fa80975f37ca8010b2e

Resolves: tdf#143372 Exclude {qtz} KeyID from SvxLanguageBox list

It will be available in 7.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2021-07-16 08:18:46 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/d82896f74d703bd9122eebc63ee9338328aadc43

Resolves: tdf#143372 Exclude {qtz} KeyID from SvxLanguageBox list

It will be available in 7.1.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.