Resolves: tdf#143372 Exclude {qtz} KeyID from SvxLanguageBox list

Change-Id: I3e52407a33f79713635063ff4ba374267eb98005
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/119002
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit da13b76e07231131cb951868a314ee6f51c0f254)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/118928
Reviewed-by: Caolán McNamara <caolanm@redhat.com>